<resources>
    <string name="app_name">Homebase</string>
    <string name="facebook_app_id">710150745832472</string>
    <string name="fb_login_protocol_scheme">fb710150745832472</string>
    <string name="loading">Loading&#8230;</string>
    <string name="logo">homebase_logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="find_email_password">Find email/password</string>
    <string name="google_login">Login with Google</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="login_warning">Please enter email/password</string>
    <string name="login_failure">Please fill in blank</string>
    <string name="login_failure_msg">Please check email/password</string>
    <string name="signup_confirm">Confirm</string>
    <string name="login_email_err_msg">Please check your Email</string>
    <string name="signup_password_err_msg">Please check your Password</string>
    <string name="signup_failure">Sign Up failed</string>
    <string name="signup_success">Sign up Success</string>
    <string name="name">Name</string>
    <string name="birth">Date of birth</string>
    <string name="signup_name_err_msg">Please enter name 2~10 letters</string>
    <string name="signup_birth_err_msg">Please enter birth YYYY.MM.dd</string>
    <string name="signup_user_collision">Already Sign up</string>
    <string name="signup_password_err_msg2">Please enter more than 6 letters</string>
    <string name="signup2_complete">Welcome to Homebase</string>
    <string name="signup2_register_team">Not register yet</string>
    <string name="signup2_register_team_2">Register Team</string>
    <string name="signup2_join_team">Already register team</string>
    <string name="signup2_join_team_2">Join team</string>
    <string name="signup3_information_input">Information input</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="next">Next</string>
    <string name="position">Position</string>
    <string name="player_no">Player No.</string>
    <string name="pitcher">Pitcher</string>
    <string name="hitter">Hitter</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="signup_birth_err_msg2">Please fill right date of birth</string>
    <string name="signup_height_err_msg">Please fill right height</string>
    <string name="signup_weight_err_msg">Please fill right weight</string>
    <string name="please_input_number">Please enter number</string>
    <string name="signup4_no_err_msg">Please enter number in No.</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="password_email">password</string>
    <string name="dialog_choose_select">Please select the information you want to find</string>
    <string name="find_email">Find Email</string>
    <string name="find_password">Find Password</string>
    <string name="find_emaill_fail">Cannot find email</string>
    <string name="registered_email">Registered Email</string>
    <string name="goto_login">Go To Login</string>
    <string name="send_email">A password change email is sent </string>
    <string name="send_email2">to the e-mail address you set.</string>
    <string name="send_email_confirm">Sent you an email</string>
    <string-array name="array_position">
        <item>Starting Pitcher</item>
        <item>Middle relief pitcher</item>
        <item>Closing Pitcher</item>
        <item>Catcher</item>
        <item>First baseman</item>
        <item>Second baseman</item>
        <item>Third baseman</item>
        <item>Shortstop</item>
        <item>Left fielder</item>
        <item>Center fielder</item>
        <item>Right fielder</item>
        <item>Designated hitter</item>
    </string-array>
    <string name="find_password_match_fail">Name and Email is not correct</string>
    <string name="check">Check</string>
    <string name="goto_signup">Go to Sign Up</string>
    <string name="register_team">Register Team</string>
    <string name="team_name">Team Name</string>
    <string name="team_introduction">Team Intro(Within 50 characters)</string>
    <string name="team_intro_hint">We are the strongest in the universe, the home baseball team. Bring it all up!</string>
    <string name="homeground">Homeground Name</string>
    <string name="register_team_name_err_msg">Please enter in less than 25 characters</string>
    <string name="register_team_intro_err_msg">Please enter in less than 50 characters</string>
    <string name="register_team_logo_err_msg">Please insert Team Logo</string>
    <string name="register_team_name_err_msg2">Please enter right Team Name</string>
    <string name="register_team_intro_err_msg2">Please enter right Team Intro</string>
    <string name="register_team_home_err_msg">Please enter right Homeground Name</string>
    <string name="register_team_complete">Team registration has been completed</string>
    <string name="team_code">Team Code</string>
    <string name="copy">Copy</string>
    <string name="copy_complete">Copy Completed</string>
    <string name="enter_team_code">Enter code of team to participate in</string>
    <string name="team_code_explanation">* Team code refers to the number and English code generated at the time of first team registration.</string>
    <string name="please_enter_team_code">Please enter team code</string>
    <string name="code_not_exist">This code does not exist</string>
    <string name="enter_team_question">Join this team?</string>
    <string name="cancel">Cancel</string>
    <string name="send_signup_email">We sent you a confirmation email</string>
    <string name="verify_email">please verify your email</string>
    <string name="main">Main</string>
    <string name="schedule">Schedule</string>
    <string name="team">Team</string>
    <string name="personal">Personal</string>
    <string name="next_match">Next\n Match</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="lose">Lose</string>
    <string name="era">ERA</string>
    <string name="ER">ER</string>
    <string name="avg">AVG</string>
    <string name="bat_top3">Batter TOP 3</string>
    <string name="pitcher_top3">Pitcher TOP 3</string>
    <string name="bat_rank">Batting Average Rank</string>
    <string name="homerun_rank">Homerun Rank</string>
    <string name="steal_rank">Steal Rank</string>
    <string name="era_rank">ERA Rank</string>
    <string name="win_rank">WIN Rank</string>
    <string name="strike_out_rank">Strike Out Rank</string>
    <string name="last_5_game">Last 5 games</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="enter_record">Enter Record</string>
    <string name="vs">vs</string>
    <string name="loading_error">Loading Error</string>
    <string name="schedule_not_exist">Schedule not exist</string>
    <string-array name="hitter_input">
        <item>@string/single</item>
        <item>@string/two_base</item>
        <item>@string/three_base</item>
        <item>@string/homerun</item>
        <item>@string/walks</item>
        <item>@string/hit</item>
        <item>@string/sacrifice_hit</item>
        <item>@string/stolen</item>
        <item>@string/strikeouts</item>
        <item>@string/grounder</item>
        <item>@string/fly_ball</item>
        <item>@string/goal</item>
        <item>@string/rbi</item>
    </string-array>
    <string-array name="pitcher_input">
        <item>@string/victory</item>
        <item>@string/defeat</item>
        <item>@string/hold</item>
        <item>@string/save</item>
        <item>@string/inning</item>
        <item>@string/strikeouts</item>
        <item>@string/hits</item>
        <item>@string/homeruns</item>
        <item>@string/walks</item>
        <item>@string/hit_batters</item>
        <item>@string/ER</item>
    </string-array>
    <string name="opponent">Opponent</string>
    <string name="homescore">Home Score</string>
    <string name="opponentscore">Opponent Score</string>
    <string name="not_number">Please Insert Number</string>
    <string name="record">Record</string>
    <string name="result">Result</string>
    <string name="single">Single</string>
    <string name="two_base">Two-base</string>
    <string name="three_base">Three-base</string>
    <string name="homerun">Home Run</string>
    <string name="walks">Walks</string>
    <string name="hit">Hit</string>
    <string name="sacrifice_hit">Sacrifice Hit</string>
    <string name="stolen">Stolen</string>
    <string name="strikeouts">Strike Outs</string>
    <string name="grounder">Grounder</string>
    <string name="fly_ball">Fly Ball</string>
    <string name="goal">Goal</string>
    <string name="rbi">RBI</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="hold">Hold</string>
    <string name="save">Save</string>
    <string name="inning">Inning</string>
    <string name="hits">Hits</string>
    <string name="homeruns">Home Runs</string>
    <string name="hit_batters">Hit Batters</string>
    <string name="zero">0</string>
    <string name="no_next_match">No Next Match</string>
    <string name="stadium">Stadium</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="fill_blank">Please fill the blank</string>
    <string name="hometeam">HomeTeam</string>
    <string name="awayteam">AwayTeam</string>
    <string name="inputscore">Input Score</string>
    <string name="change_schedule">Change Schedule</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="no_record">No Record</string>
    <string name="no_record_1">Oh! There is no registered schedule yet.</string>
    <string name="no_record_2">How about this weekend?</string>
</resources>
