<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/theme_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/signup2_iv_logo"
        android:layout_width="138dp"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/signup2_tv_finish"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="82dp"
        android:text="@string/signup2_complete"
        android:textSize="20sp"
        android:textColor="#2c2c2c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="13sp"
        android:layout_marginBottom="13dp"
        android:text="@string/signup2_register_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signup2_btn_register_team"
        android:textSize="15sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/signup2_register_team_2"
        android:background="@drawable/radius_button_login"
        android:textColor="#ffffff"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="13sp"
        android:text="@string/signup2_join_team"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signup2_btn_join_team"
        android:text="@string/signup2_join_team_2"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/radius_button_login"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.v7.widget.LinearLayoutCompat>