<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_background">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_iv_logo"
            android:layout_width="138dp"
            android:layout_height="108dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="26dp"
            android:layout_marginTop="77dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/radius_button_login"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:text="@string/sign_up"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/login_tv_find_email_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:text="@string/find_email_password"
                android:textSize="12sp" />

        </android.support.v7.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/login_btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/radius_button_google"
            android:drawableStart="@drawable/google_logo"
            android:paddingStart="16dp"
            android:textAllCaps="false"
            android:text="@string/google_login"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_btn_facebook"
            android:background="@drawable/radius_button_facebook"
            android:drawableStart="@drawable/facebook_logo"
            android:paddingStart="16dp"
            android:textSize="14sp"
            android:text="@string/facebook_login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.LinearLayoutCompat>