<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/dialog_input_score_btn_cancel"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/icon_exit" />

    <TextView
        android:id="@+id/dialog_input_score_tv_inputscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/inputscore"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_input_score_tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/signup_confirm"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/dialog_input_score_tv_home"
        android:text="@string/hometeam"
        android:layout_below="@id/dialog_input_score_tv_inputscore"
        android:layout_toStartOf="@id/dialog_input_score_tv_vs"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_input_score_tv_opponent"
        android:text="@string/awayteam"
        android:layout_below="@id/dialog_input_score_tv_inputscore"
        android:layout_toEndOf="@id/dialog_input_score_tv_vs"
        android:layout_marginStart="43dp"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_input_score_tv_vs"
        android:layout_marginTop="87dp"
        android:layout_below="@id/dialog_input_score_tv_inputscore"
        android:layout_centerHorizontal="true"
        android:text="@string/vs"
        android:textSize="27sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/dialog_input_score_et_home"
        android:layout_below="@id/dialog_input_score_tv_home"
        android:layout_toStartOf="@id/dialog_input_score_tv_vs"
        android:layout_marginEnd="45dp"
        android:inputType="number"
        android:hint="@string/zero"
        android:maxLength="2"
        android:textSize="45sp"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/dialog_input_score_et_opponent"
        android:hint="@string/zero"
        android:inputType="number"
        android:layout_below="@id/dialog_input_score_tv_opponent"
        android:textSize="45sp"
        android:maxLength="2"
        android:textColor="@color/colorBlack"
        android:layout_toEndOf="@id/dialog_input_score_tv_vs"
        android:layout_marginStart="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>