<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/theme_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/find_password2_iv_logo"
        android:layout_width="138dp"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="39dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/find_password2_tv_send_email"
        android:text="@string/send_email_confirm"
        android:layout_marginBottom="37dp"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/find_email2_arrow"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="26dp"
        android:layout_width="28dp"
        android:layout_height="14dp" />

    <Button
        android:id="@+id/find_password2_btn_goto_login"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/goto_login"
        android:background="@drawable/radius_button_login"
        android:textColor="#ffffff"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.v7.widget.LinearLayoutCompat>