<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2c2c2c">

    <Button
        android:id="@+id/signup_btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/back" />

    <TextView
        android:id="@+id/signup_tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="19sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_til_email"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/signup_tv_signup"
        android:textColorHint="#ffffff"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_et_email"
            android:hint="@string/email"
            android:textSize="17sp"
            android:textColor="@color/colorSky"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_til_password"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/signup_til_email"
        android:textColorHint="#ffffff"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_et_password"
            android:hint="@string/password"
            android:textSize="17sp"
            android:textColor="@color/colorSky"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_til_password_confirm"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="#ffffff"
        android:layout_below="@id/signup_til_password"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_et_password_confirm"
            android:hint="@string/password_confirm"
            android:textSize="17sp"
            android:textColor="@color/colorSky"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    
    <Button
        android:id="@+id/signup_btn_confirm"
        android:textSize="17sp"
        android:textColor="#fffffd"
        android:background="#4b4b4b"
        android:text="@string/signup_confirm"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</RelativeLayout>